--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
 	"version": "2.0.0",
 	"tasks": [{
 			"type": "cppbuild",
-			"label": "C/C++: clang++ (LLVM) build active file with OpenMP and Metal",
+			"label": "Build 01",
 			"command": "/opt/homebrew/opt/llvm/bin/clang++",
 			"args": [
 				"-std=c++17",
@@ -29,12 +29,12 @@
 				"isDefault": true
 			},
 			"detail": "compiler: /opt/homebrew/opt/llvm/bin/clang++",
-			"dependsOn": ["Build .metallib"],
+			"dependsOn": ["Build .metallib 01"],
 		},
 		// See: https://developer.apple.com/documentation/metal/shader_libraries/building_a_library_with_metal_s_command-line_tools?language=objc
 		{
 			"type": "shell",
-			"label": "Build .air",
+			"label": "Build .air 01",
 			"command": "xcrun",
 			"args": [
 				"-sdk", "macosx", "metal",
@@ -43,13 +43,62 @@
 			]
 		}, {
 			"type": "shell",
-			"label": "Build .metallib",
+			"label": "Build .metallib 01",
 			"command": "xcrun",
 			"args": [
 				"-sdk", "macosx", "metallib", "${workspaceFolder}/01-MetalAdder/library.air",
 				"-o", "${workspaceFolder}/01-MetalAdder/default.metallib"
 			],
-			"dependsOn": ["Build .air"]
+			"dependsOn": ["Build .air 01"]
+
+		}, {
+			"type": "cppbuild",
+			"label": "Build 02",
+			"command": "/opt/homebrew/opt/llvm/bin/clang++",
+			"args": [
+				"-std=c++17",
+				"-stdlib=libc++",
+				"-O2",
+				// OpenMP includes & configuration
+				"-L/opt/homebrew/opt/libomp/lib", "-fopenmp",
+				// Metal includes & configuration
+				"-I${workspaceFolder}/metal-cpp", "-fno-objc-arc",
+				"-framework", "Metal", "-framework", "Foundation", "-framework", "MetalKit",
+				"-g",
+				"${workspaceFolder}/02-GeneralArrayOperations/main.cpp", "${workspaceFolder}/02-GeneralArrayOperations/MetalOperations.cpp",
+				"-o",
+				"${workspaceFolder}/02-GeneralArrayOperations/benchmark.x"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$gcc"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"detail": "compiler: /opt/homebrew/opt/llvm/bin/clang++",
+			"dependsOn": ["Build .metallib 02"],
+		}, {
+			"type": "shell",
+			"label": "Build .air 02",
+			"command": "xcrun",
+			"args": [
+				"-sdk", "macosx", "metal",
+				"-c", "${workspaceFolder}/02-GeneralArrayOperations/ops.metal",
+				"-o", "${workspaceFolder}/02-GeneralArrayOperations/library.air"
+			]
+		}, {
+			"type": "shell",
+			"label": "Build .metallib 02",
+			"command": "xcrun",
+			"args": [
+				"-sdk", "macosx", "metallib", "${workspaceFolder}/02-GeneralArrayOperations/library.air",
+				"-o", "${workspaceFolder}/02-GeneralArrayOperations/default.metallib"
+			],
+			"dependsOn": ["Build .air 02"]
 
 		},
 	]
