Simplified library creation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,9 @@
         "algorithm": "cpp",
         "functional": "cpp",
         "iterator": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "__tree": "cpp",
+        "list": "cpp",
+        "map": "cpp"
     }
 }
