--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -53,6 +53,38 @@
 
 		}, {
 			"type": "cppbuild",
+			"label": "Build 02 chaining",
+			"command": "/opt/homebrew/opt/llvm/bin/clang++",
+			"args": [
+				"-std=c++17",
+				"-stdlib=libc++",
+				"-O2",
+				// OpenMP includes & configuration
+				"-L/opt/homebrew/opt/libomp/lib", "-fopenmp",
+				// Metal includes & configuration
+				"-I${workspaceFolder}/metal-cpp", "-fno-objc-arc",
+				"-framework", "Metal", "-framework", "Foundation", "-framework", "MetalKit",
+				"-g",
+				"${workspaceFolder}/02-GeneralArrayOperations/chaining_operators.cpp",
+				"${workspaceFolder}/02-GeneralArrayOperations/CPUOperations.cpp",
+				"${workspaceFolder}/02-GeneralArrayOperations/MetalOperations.cpp",
+				"-o",
+				"${workspaceFolder}/02-GeneralArrayOperations/chaining_benchmark.x"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$gcc"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"detail": "compiler: /opt/homebrew/opt/llvm/bin/clang++",
+			"dependsOn": ["Build .metallib 02"],
+		}, {
+			"type": "cppbuild",
 			"label": "Build 02",
 			"command": "/opt/homebrew/opt/llvm/bin/clang++",
 			"args": [
@@ -65,7 +97,9 @@
 				"-I${workspaceFolder}/metal-cpp", "-fno-objc-arc",
 				"-framework", "Metal", "-framework", "Foundation", "-framework", "MetalKit",
 				"-g",
-				"${workspaceFolder}/02-GeneralArrayOperations/main.cpp", "${workspaceFolder}/02-GeneralArrayOperations/MetalOperations.cpp",
+				"${workspaceFolder}/02-GeneralArrayOperations/main.cpp",
+				"${workspaceFolder}/02-GeneralArrayOperations/CPUOperations.cpp",
+				"${workspaceFolder}/02-GeneralArrayOperations/MetalOperations.cpp",
 				"-o",
 				"${workspaceFolder}/02-GeneralArrayOperations/benchmark.x"
 			],
