--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,9 +8,7 @@
 				"-std=c++17",
 				"-stdlib=libc++",
 				"-O2",
-				// OpenMP includes & configuration
 				"-L/usr/local/opt/libomp/lib", "-fopenmp",
-				// Metal includes & configuration
 				"-I${workspaceFolder}/metal-cpp", "-fno-objc-arc",
 				"-framework", "Metal", "-framework", "Foundation", "-framework", "MetalKit",
 				"-g",
@@ -29,9 +27,8 @@
 				"isDefault": true
 			},
 			"detail": "compiler: /usr/local/opt/llvm/bin/clang++",
-			"dependsOn": ["Build .metallib 01"],
+			"dependsOn": ["Build .metallib 01"]
 		},
-		// See: https://developer.apple.com/documentation/metal/shader_libraries/building_a_library_with_metal_s_command-line_tools?language=objc
 		{
 			"type": "shell",
 			"label": "Build .air 01",
@@ -59,9 +56,7 @@
 				"-std=c++17",
 				"-stdlib=libc++",
 				"-O2",
-				// OpenMP includes & configuration
 				"-L/usr/local/opt/libomp/lib", "-fopenmp",
-				// Metal includes & configuration
 				"-I${workspaceFolder}/metal-cpp", "-fno-objc-arc",
 				"-framework", "Metal", "-framework", "Foundation", "-framework", "MetalKit",
 				"-g",
@@ -82,7 +77,7 @@
 				"isDefault": true
 			},
 			"detail": "compiler: /usr/local/opt/llvm/bin/clang++",
-			"dependsOn": ["Build .metallib 02"],
+			"dependsOn": ["Build .metallib 02"]
 		}, {
 			"type": "cppbuild",
 			"label": "Build 02",
@@ -91,9 +86,7 @@
 				"-std=c++17",
 				"-stdlib=libc++",
 				"-O2",
-				// OpenMP includes & configuration
 				"-L/usr/local/opt/libomp/lib", "-fopenmp",
-				// Metal includes & configuration
 				"-I${workspaceFolder}/metal-cpp", "-fno-objc-arc",
 				"-framework", "Metal", "-framework", "Foundation", "-framework", "MetalKit",
 				"-g",
@@ -114,7 +107,7 @@
 				"isDefault": true
 			},
 			"detail": "compiler: /usr/local/opt/llvm/bin/clang++",
-			"dependsOn": ["Build .metallib 02"],
+			"dependsOn": ["Build .metallib 02"]
 		}, {
 			"type": "cppbuild",
 			"label": "Build benchmark paper 02",
@@ -123,9 +116,7 @@
 				"-std=c++17",
 				"-stdlib=libc++",
 				"-O2",
-				// OpenMP includes & configuration
 				"-L/usr/local/opt/libomp/lib", "-fopenmp",
-				// Metal includes & configuration
 				"-I${workspaceFolder}/metal-cpp", "-fno-objc-arc",
 				"-framework", "Metal", "-framework", "Foundation", "-framework", "MetalKit",
 				"-g",
@@ -146,7 +137,7 @@
 				"isDefault": true
 			},
 			"detail": "compiler: /usr/local/opt/llvm/bin/clang++",
-			"dependsOn": ["Build .metallib 02"],
+			"dependsOn": ["Build .metallib 02"]
 		}, {
 			"type": "shell",
 			"label": "Build .air 02",
@@ -174,9 +165,7 @@
 				"-std=c++17",
 				"-stdlib=libc++",
 				"-O2",
-				// OpenMP includes & configuration
 				"-L/usr/local/opt/libomp/lib", "-fopenmp",
-				// Metal includes & configuration
 				"-I${workspaceFolder}/metal-cpp", "-fno-objc-arc",
 				"-framework", "Metal", "-framework", "Foundation", "-framework", "MetalKit",
 				"-g",
@@ -197,19 +186,16 @@
 				"isDefault": true
 			},
 			"detail": "compiler: /usr/local/opt/llvm/bin/clang++",
-			"dependsOn": ["Build .metallib 03"],
+			"dependsOn": ["Build .metallib 03"]
 		}, {
 			"type": "cppbuild",
 			"label": "Build benchmark paper 03",
 			"command": "/usr/local/opt/llvm/bin/clang++",
 			"args": [
 				"-std=c++17",
-				// "-stdlib=libc++",
 				"-std=c++11",
 				"-O2",
-				// OpenMP includes & configuration
 				"-L/usr/local/opt/libomp/lib", "-fopenmp",
-				// Metal includes & configuration
 				"-I${workspaceFolder}/metal-cpp", "-fno-objc-arc",
 				"-framework", "Metal", "-framework", "Foundation", "-framework", "MetalKit",
 				"-g",
@@ -230,7 +216,7 @@
 				"isDefault": true
 			},
 			"detail": "compiler: /usr/local/opt/llvm/bin/clang++",
-			"dependsOn": ["Build .metallib 03"],
+			"dependsOn": ["Build .metallib 03"]
 		}, {
 			"type": "shell",
 			"label": "Build .air 03",
@@ -250,6 +236,6 @@
 			],
 			"dependsOn": ["Build .air 03"]
 
-		},
+		}
 	]
 }
